--- a/pdp_util/templates/pcds_index.html
+++ b/pdp_util/templates/pcds_index.html
@@ -2,17 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/">
     <head>
-        <title>PCIC Data Portal: $title</title>
+        <title>PCDS: ${title}</title>
 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-        <link type="text/css" href="${app_root}/css/blitzer/jquery-ui-1.8.2.custom.css" rel="stylesheet" /> 
+        <link type="text/css" href="${app_root}/css/jquery-ui-1.10.2.custom.css" rel="stylesheet" /> 
         <link rel="stylesheet" type="text/css" media="screen" href="${app_root}/css/default.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="${app_root}/css/pcic.css" />
         <link rel="alternate" type="application/thredds+xml" title="THREDDS Catalog" href="${root}/catalog.xml" />
-        <script type="text/javascript" src="${app_root}/js/jquery-1.4.2.min.js"></script>
-        <script type="text/javascript" src="${app_root}/js/jquery-ui-1.8.2.custom.min.js"></script>
-        <script type="text/javascript" src="${app_root}/js/jquery.hotkeys-0.7.9.min.js"></script>
+        <script type="text/javascript" src="${app_root}/js/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="${app_root}/js/jquery-ui-1.10.2.custom.js"></script>
         <script type="text/javascript">
             var root = "${root}";
         </script>
@@ -25,13 +24,11 @@
     <div id="wrapper">
     <div id="header">
     <a href="http://pacificclimate.org"><img src="${app_root}/images/banner.png" alt="PCIC Logo" /></a>
-    <div id="header-title">PCIC Data Portal</div>
+    <div id="header-title">PCSD<py:if test="title">: ${title}</py:if></div>
     </div>
     <div id="header-menu">
         <ul class="menu" style="float: left">
         <li><a href="http://pacificclimate.org">PCIC Home</a></li>
-        <li><a href="http://pacificclimate.org/terms-of-use">Terms of Use</a></li>
-        <li><a href="http://pacificclimate.org/contact">Contact Us</a></li>
         </ul>
     </div>
     <div id="login">
@@ -61,13 +58,11 @@
                 </tr>
             </table>
 
-            <p class="footnote"><em>Powered by <a href="http://pydap.org/">pydap/$version</a></em></p>
+            <p class="footnote"><em>Powered by <a href="http://pydap.org/">pydap/${version}</a></em></p>
         </div>
     <div id="footer-menu">
         <ul class="menu">
         <li><a href="http://pacificclimate.org">PCIC Home</a></li>
-        <li><a href="http://pacificclimate.org/terms-of-use">Terms of Use</a></li>
-        <li><a href="http://pacificclimate.org/contact">Contact Us</a></li>
         </ul>
     </div>
     </div>
