--- a/pdp_util/templates/pcds_index.html
+++ b/pdp_util/templates/pcds_index.html
@@ -24,7 +24,7 @@
     <div id="wrapper">
     <div id="header">
     <a href="http://pacificclimate.org"><img src="${app_root}/images/banner.png" alt="PCIC Logo" /></a>
-    <div id="header-title">PCSD<py:if test="title">: ${title}</py:if></div>
+    <div id="header-title">PCDS<py:if test="title">: ${title}</py:if></div>
     </div>
     <div id="header-menu">
         <ul class="menu" style="float: left">
